[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/LEVEL SELECTION.gd" type="Script" id=1]
[ext_resource path="res://FONTS/JOKERMAN.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://FONTS/ITCKRIST.TTF" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.164706, 0.164706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
shadow_size = 50

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[node name="LEVEL SELECTION" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 540.0
custom_constants/separation = 70

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "  SELECT LEVEL"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 924.0
margin_bottom = 407.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 353.0
margin_right = 570.0
margin_bottom = 257.0
custom_constants/separation = 7

[node name="LEVEL 1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "    LEVEL 1    "

[node name="LEVEL 2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 217.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
text = "LEVEL 2"

[node name="LEVEL 3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 217.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 5 )
text = "LEVEL 3"

[node name="MULTIPLAYER" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 217.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 6 )
text = "MULTIPLAYER"

[node name="BACK" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 217.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 7 )
text = "BACK"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/LEVEL 1" to="." method="_on_LEVEL_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/LEVEL 2" to="." method="_on_LEVEL_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MULTIPLAYER" to="." method="_on_MULTIPLAYER_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/BACK" to="." method="_on_BACK_pressed"]
